commit test hudson integration

--- a/src/main/webapp/mainPage.xhtml
+++ b/src/main/webapp/mainPage.xhtml
@@ -15,6 +15,21 @@
 <title>Tom's JSF page</title>
 </head>
 <body>
+This is just a POC
+
+Technologies used:
+- eclipse with local Git Repo
+- push to github
+- integration with hudson doing local build
+- push to cloud 
+
+Technologies used in Project
+- JSF
+- EJB 
+- JPA
+- MongoDB
+
+Currently is in start phase 
 <f:view>
 
 
