changed html5 page

--- a/src/main/webapp/html5.html
+++ b/src/main/webapp/html5.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
+<!-- above means html5 -->
 <html>
 <head>
+<!-- info for browser -->
 <meta charset="ISO-8859-1">
+
 <title>toms html5 page</title>
 </head>
 <body>
 <!--  span is to differentiate sections -->
-<span>Welcome to my webpage</span>
+<!-- this page is created directly in html5, not generated -->
+<span>Tom's POC tech&nbsp;Page</span><hr/>
 <h1>bakkerij</h1>
-<span>this is just a POC Webpage where I illustrate diff tech, these are</span>
+<span>this is just a POC Webpage where I illustrate diff tech</span>
+<!-- start of paragraph -->
+<p> these are the different ones used:</p>
 <!-- headings should not be used to differentiate font types, this is for css -->
 <h3>Web/Presentation tier</h3>
-<h2>html5</h2>
+<!-- emphasis, don't use italic & bold  -->
+<h2><em>html5</em></h2>
 <h2>jsp</h2>
 <h2>servlet</h2>
 <h2>jsf</h2>
@@ -23,5 +30,13 @@
 <h2>hudson</h2>
 <h2>eclipse</h2>
 <h2>Maven3</h2>
+<blockquote>
+my blockquote, this is an old tag
+<blockquote>yet another one</blockquote>
+</blockquote>
+<!-- address might be scanned by robots  -->
+<address>
+http://bakkerij-tcleyman.rhcloud.com
+</address>
 </body>
 </html>
