--- a/src/main/webapp/html5.html
+++ b/src/main/webapp/html5.html
@@ -38,5 +38,8 @@ my blockquote, this is an old tag
 <address>
 http://bakkerij-tcleyman.rhcloud.com
 </address>
+&copy; Copyright: tcleyman 
+<br/>
+&trade; Trademark: tcleyman
 </body>
 </html>
