--- a/src/main/webapp/bakkerij.xhtml
+++ b/src/main/webapp/bakkerij.xhtml
@@ -10,18 +10,25 @@
       xmlns:fn="http://java.sun.com/jsp/jstl/functions"
       xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"        xmlns:sql="http://java.sun.com/jsp/jstl/sql"
       xmlns:permittedTaglibs="http://jakarta.apache.org/taglibs/standard/permittedTaglibs"
-      xmlns:scriptfree="http://jakarta.apache.org/taglibs/standard/scriptfree"> 
+      xmlns:scriptfree="http://jakarta.apache.org/taglibs/standard/scriptfree"
+      xmlns:tomstest="http://java.sun.com/jsf/composite/test"
+      > 
 
 <h:head>
-
+<!-- this page is an attempt main page for bakkerij , is in really early phase -->
+<title>Bakkerij Cleymans - de Lukken</title>
 </h:head> 
 <body>
-
+<div>
+<h1>Bakkerij Cleymans - de Lukken</h1>
+</div>
     <rich:panel>
         <f:facet name="header">
         Write your own custom rich components with built-in AJAX support
         </f:facet>
 		<h:outputText value="Panel Body" /> 
 	</rich:panel>
+<!-- below is component I reused..  -->
+<tomstest:Footer/>
 </body> 
 </html>
