--- a/src/main/webapp/bakkerij.xhtml
+++ b/src/main/webapp/bakkerij.xhtml
@@ -33,6 +33,8 @@
 <!-- in the constructor of mainPageCDI I'm getting the FacesContext and getting useragent 
 with this we can check if a mobile browser is used-->
 BrowserAgent: #{mainPageCDI.userAgent}<br/>
+       
+       <!-- best user OGV for firefox, use MP4 for all others -->
        <!--   <h:panelGroup rendered="#{bean.type == 'OGV_VIDEO'}">
             <video class="video-large" controls="controls" autoplay="autoplay">
                 <source type="video/ogg" src="#{request.contextPath}/#{mediaItemBean.mediaItem.id}" />
