last commit, renaming to bakkerij-cleymans

--- a/src/main/webapp/bakkerij.xhtml
+++ b/src/main/webapp/bakkerij.xhtml
@@ -32,6 +32,7 @@
 <!-- below is component I reused..  -->
 <!-- in the constructor of mainPageCDI I'm getting the FacesContext and getting useragent 
 with this we can check if a mobile browser is used-->
+<h:graphicImage value="#{request.contextPath}/images/schoenen.JPG" />
 BrowserAgent: #{mainPageCDI.userAgent}<br/>
        
        <!-- best user OGV for firefox, use MP4 for all others -->
