--- a/src/main/webapp/bakkerij.xhtml
+++ b/src/main/webapp/bakkerij.xhtml
@@ -25,7 +25,7 @@
 </div>
     <rich:panel>
         <f:facet name="header">
-        Please note that this is just a POC page
+        Please note that this is just a POC 'Proof of Concept' page
         </f:facet>
 		<h:outputText value="POC" /> 
 	</rich:panel>
