--- a/src/main/webapp/bakkerij.xhtml
+++ b/src/main/webapp/bakkerij.xhtml
@@ -20,10 +20,16 @@
 <link href="#{request.contextPath}/css/bakkerij.css" rel="stylesheet" type="text/css"/>
 </h:head> 
 <body>
+<!-- this facet only affects mobile browser -->
+<f:facet name="metaContainer">
+        <meta name="viewport" content="user-scalable=no,width=device-width"/>
+    </f:facet>
+
 <div>
 <h1>Bakkerij Cleymans - de Lukken</h1>
 </div>
     <rich:panel>
+    
         <f:facet name="header">
         Please note that this is just a POC 'Proof of Concept' page
         </f:facet>
