added message bundle

--- a/src/main/webapp/bakkerij.xhtml
+++ b/src/main/webapp/bakkerij.xhtml
@@ -26,7 +26,7 @@
     </f:facet>
 
 <div>
-<h1>Bakkerij Cleymans - de Lukken</h1>
+<h1>#{msgs['application.title']}</h1>
 </div>
     <rich:panel>
     
