--- a/src/main/webapp/resources/test/Footer.xhtml
+++ b/src/main/webapp/resources/test/Footer.xhtml
@@ -26,6 +26,7 @@
 <h:link value="Home" outcome="bakkerij"/>
 <h:outputText value=" | " />
 <h:link value="Bestellen" outcome="bakkerij"/>
+<h:outputText value="#{msgs['application.footer']}" />
 </div>
 </composite:implementation>
 </body>
