--- a/src/main/webapp/bakkerij.xhtml
+++ b/src/main/webapp/bakkerij.xhtml
@@ -40,7 +40,7 @@
 with this we can check if a mobile browser is used-->
 <h:graphicImage styleClass="image-thumb" value="#{request.contextPath}/images/schoenen.JPG" />
 BrowserAgent: #{mainPageCDI.userAgent}<br/><br/>
-hotkey for debug:
+hotkey for debug: (CTRL-SHIFT k)
 	<ui:debug hotkey="k" rendered="true"></ui:debug>
 
 	<!-- best user OGV for firefox, use MP4 for all others -->
